--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1617,6 +1617,5 @@
     "TOP": "TOP",
     "BOTTOM": "BOTTOM",
     "DuplicatedPositionsError": "Duplicate number",
-    "MissingConnectionsInVoltageLevel": "Missing connections in voltage level",
-    "ConnectionsRemovedFromList": "Connections removed from list on validation"
+    "MissingConnectionsInVoltageLevel": "Missing connections in voltage level (Connections removed from list on validation)"
 }
