upper case 'empty'
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -83,7 +83,7 @@
     "None": "None",
     "EmptyField": "Empty the field",
     "NumericValueOrEmptyField": "Numeric value or Empty the field",
-    "ValueOrEmptyField": "Value or empty the field",
+    "ValueOrEmptyField": "Value or Empty the field",
     "NoneUpcomingOverload": "None",
     "Feeders": "Feeder",
     "NominalVoltage": "Nominal voltage",
