edit olg switch
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1615,5 +1615,7 @@
     "Object": "Object",
     "Array": "Array",
     "Boolean": "Boolean",
-    "Enum": "Enumeration"
+    "Enum": "Enumeration",
+    "Edit": "Edit",
+    "View": "View"
 }
