--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1613,8 +1613,8 @@
     "Boolean": "Booléen",
     "Enum": "Énumération",
     "MOVE_VOLTAGE_LEVEL_FEEDER_BAYS": "Déplacer les départs",
-    "TOP": "HAUT",
-    "BOTTOM": "BAS",
+    "TOP": "Haut",
+    "BOTTOM": "Bas",
     "DuplicatedPositionsError": "Numéro en doublon",
     "MissingConnectionsInVoltageLevel": "Départs absents du poste (Départs supprimés de la liste à la validation)"
 }
