--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -81,6 +81,9 @@
     "images": "Images",
     "NetworkVisualizations": "Network visualizations",
     "None": "None",
+    "EmptyField": "Empty the field",
+    "NumericValueOrEmptyField": "Numeric value or Empty the field",
+    "ValueOrEmptyField": "Value or Empty the field",
     "NoneUpcomingOverload": "None",
     "Feeders": "Feeder",
     "NominalVoltage": "Nominal voltage",
