--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -81,6 +81,9 @@
     "images": "Images",
     "NetworkVisualizations": "Images réseau",
     "None": "Aucun",
+    "EmptyField": "Vider le champs",
+    "NumericValueOrEmptyField": "Valeur numérique ou Vider le champs",
+    "ValueOrEmptyField": "Valeur ou Vider le champs",
     "NoneUpcomingOverload": "Aucune",
     "Feeders": "Départs",
     "NominalVoltage": "Tension nominale",
