Update show map tooltip
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1561,7 +1561,7 @@
     "labeledGroupSecurity": "Security",
     "selectedOperationalLimitsGroup1": "Active limit set on side 1",
     "selectedOperationalLimitsGroup2": "Active limit set on side 2",
-    "OpenMapCard": "Add the map",
+    "OpenMapCard": "Show the map",
     "MapCard": "Map",
     "MapCardNotAvailable": "Map is not available",
     "AddNewCard": "Images",
