--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1557,7 +1557,7 @@
     "labeledGroupSecurity": "Sécurité",
     "selectedOperationalLimitsGroup1": "Jeu de limites actif côté 1",
     "selectedOperationalLimitsGroup2": "Jeu de limites actif côté 2",
-    "OpenMapCard": "Ajouter la carte géographique",
+    "OpenMapCard": "Afficher la carte géographique",
     "MapCard": "Carte",
     "MapCardNotAvailable": "La carte n'est pas disponible",
     "AddNewCard": "Images",
