--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1519,6 +1519,8 @@
     "previousStatus": "Previous status",
     "currentStatus": "Modified status",
     "Open": "Open",
+    "areSwitchesOpen": "Open",
+    "areSwitchesClosed": "Closed",
     "Closed": "Closed",
     "GridLayoutPanel": "Grid layout panel",
     "GridLayoutPanelAndTree": "Grid layout panel and tree",
