--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1600,6 +1600,7 @@
     "BUILT_WITH_WARNING": "Warnings",
     "BUILT_WITH_ERROR": "Errors",
     "NOT_BUILT": "Not built",
+    "BUILDING": "Building",
     "allBusbarSections": "All",
     "allOptionHelperText": "Busbars have different sections (number or index)",
     "enableNavigationSync" : "Enable multi-tab tree navigation",
