--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1558,6 +1558,8 @@
     "labeledGroupSecurity": "Security",
     "selectedOperationalLimitsGroup1": "Active limit set on side 1",
     "selectedOperationalLimitsGroup2": "Active limit set on side 2",
+    "operationalLimitsGroup1WithProperties": "Active limit set on side 1 with property",
+    "operationalLimitsGroup2WithProperties": "Active limit set on side 2 with property",
     "OpenMapCard": "Show the map",
     "MapCard": "Map",
     "MapCardNotAvailable": "Map is not available",
