add switch for operational limits group edition (#3306)
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1615,10 +1615,13 @@
     "Array": "Tableau",
     "Boolean": "Booléen",
     "Enum": "Énumération",
+    "Edit": "Édition",
+    "View": "Visualisation",
     "nodeType": "Type",
     "nodeStatus": "Statut",
     "CONSTRUCTION": "Construction",
     "SECURITY": "Sécurité",
+    "disableOLGedition": "Les données saisies pour les jeux de limites ne seront pas conservées. Voulez-vous continuer ?",
     "MOVE_VOLTAGE_LEVEL_FEEDER_BAYS": "Déplacer les départs",
     "TOP": "Haut",
     "BOTTOM": "Bas",
