--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1619,10 +1619,13 @@
     "Array": "Array",
     "Boolean": "Boolean",
     "Enum": "Enumeration",
+    "Edit": "Edit",
+    "View": "View",
     "nodeType": "Type",
     "nodeStatus": "Status",
     "CONSTRUCTION": "Construction",
     "SECURITY": "Security",
+    "disableOLGedition": "Entered limit sets data will be lost. Do you wish to continue?",
     "MOVE_VOLTAGE_LEVEL_FEEDER_BAYS": "Move connections",
     "TOP": "Top",
     "BOTTOM": "Bottom",
