--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1626,5 +1626,6 @@
     "TOP": "Haut",
     "BOTTOM": "Bas",
     "DuplicatedPositionsError": "Numéro en doublon",
-    "MissingConnectionsInVoltageLevel": "Départs absents du poste (Départs supprimés de la liste à la validation)"
+    "MissingConnectionsInVoltageLevel": "Départs absents du poste (Départs supprimés de la liste à la validation)",
+    "moveFeederBaysSections": "Les départs déplacés sont préparés sur la section de barre sélectionnée"
 }
