--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1630,5 +1630,6 @@
     "TOP": "Top",
     "BOTTOM": "Bottom",
     "DuplicatedPositionsError": "Duplicated number",
-    "MissingConnectionsInVoltageLevel": "Missing connections in voltage level (Connections removed from list on validation)"
+    "MissingConnectionsInVoltageLevel": "Missing connections in voltage level (Connections removed from list on validation)",
+    "ConnectionEquipmentId": "Equipment ID"
 }
