--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1628,5 +1628,5 @@
     "DuplicatedPositionsError": "Numéro en doublon",
     "MissingConnectionsInVoltageLevel": "Départs absents du poste (Départs supprimés de la liste à la validation)",
     "moveFeederBaysSections": "Les départs déplacés sont préparés sur la section de barre sélectionnée",
-    "ConnectionEquipmentId": "ID de l'ouvrage"
+    "equipmentID": "ID de l'ouvrage"
 }
