--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1634,5 +1634,6 @@
     "BOTTOM": "Bottom",
     "DuplicatedPositionsError": "Duplicated number",
     "MissingConnectionsInVoltageLevel": "Missing connections in voltage level (Connections removed from list on validation)",
-    "moveFeederBaysSections": "Feeder bay will be connected onto the selected busbar section"
+    "moveFeederBaysSections": "Feeder bay will be connected onto the selected busbar section",
+    "equipmentID": "Equipment ID"
 }
