agregate voltage levels in the voltage levels filter selector of the map

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -78,6 +78,7 @@
     "openVoltageLevel": "Open the voltage level",
     "CBAll": "All",
     "CBNone": "None",
+    "voltageLevelInterval": "[{lowBound} kV, {highBound} kV)",
     "Map": "Map",
     "Tree": "Tree",
     "modifications": "Modifications",
