launch, stop pcc min N-1 computation
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1392,6 +1392,9 @@
     "StateEstimation": "State estimation",
     "startStateEstmationError": "An error occurred while launching the state estimation",
     "stateEstimationError": "An error occurred when executing the state estimation",
+    "PccMin": "Pcc min N-1",
+    "startPccMinError": "An error occurred while launching the pcc min",
+    "pccMinError": "An error occurred when executing the pcc min",
     "NoFilter": "No filter",
     "searchPlaceholder": "Search",
     "searchPlaceholderLog": "Search in Logs",
