--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1392,6 +1392,9 @@
     "StateEstimation": "Estimation d'état",
     "startStateEstimationError": "Une erreur est survenue lors du lancement de l'estimation d'état",
     "stateEstimationError": "Une erreur est survenue lors de l'exécution de l'estimation d'état",
+    "PccMin": "Pcc min N-1",
+    "startPccMinError": "Une erreur est survenue lors du lancement de pccMin",
+    "pccMinError": "Une erreur est survenue lors de l'exécution de pccMin",
     "NoFilter": "Aucun filtre",
     "searchPlaceholder": "Recherche",
     "searchPlaceholderLog": "Rechercher dans les Logs",
