--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -2,10 +2,11 @@
     "debug.message.downloadFile": "À la fin du calcul ses données seront téléchargées.",
     "debug.header.fileNotFound": "Données de calcul non trouvées",
     "debug.header.fileError": "Échec du téléchargement des données de calcul",
-    "export.message.subscribed": "Vous serez notifié lorsque l'export sera prêt.",
-    "export.message.downloadStarted": "Téléchargement en cours",
     "export.header.fileNotFound": "Fichier non trouvé",
     "export.header.fileError": "Échec du téléchargement du fichier",
+    "export.message.started": "Export du fichier commencé",
+    "export.message.succeeded": "Export du fichier réussi",
+    "export.message.failed": "Échec du téléchargement du fichier",
 
     "button.delete": "Supprimer",
     "button.continue": "Continuer",
