--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -916,7 +916,7 @@
     "SelectedOperationalLimitGroup": "Active limit set",
     "SelectedOperationalLimitGroups": "Active limit sets",
     "Applicability": "Applicability",
-    "UsedPropertyName": "Property name already used",
+    "NameUnique": "Name should be unique",
 
     "CreateTwoWindingsTransformer": "Create a 2 windings transformer",
     "ModifyTwoWindingsTransformer": "Modify a 2 windings transformer",
