--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -850,7 +850,6 @@
     "DISCONNECTOR": "Sectionneur",
     "SameHorizAndVertPos": "Au moins deux SJBs ont les mêmes positions horizontale et verticale",
     "DuplicateId": "Identifiant non unique",
-    "CouplingOmnibusBetweenSameBusbar": "Couplage/omnibus interdit entre le même SJB",
     "VoltageLevelModificationError": "Erreur lors de la modification d'un poste",
     "AddCouplingDeviceError": "Erreur lors de l'ajout d'un omnibus/couplage",
     "BusBarSectionID1": "SJB / Nœud 1",
@@ -1527,7 +1526,7 @@
     "CREATE_COUPLING_DEVICE": "Ajouter un couplage ou un omnibus",
     "CreateVoltageLevelSection": "Ajouter un tronçon ou une section",
     "CreateCouplingDeviceDiagramButton": "Voir le poste",
-    "CreateCouplingDeviceIdenticalBusBar": "Les sections de barre 1 et 2 doivent être différentes",
+    "CreateCouplingDeviceIdenticalBusBar": "Les SJB / Nœuds 1 et 2 doivent être différents",
     "builtNodeTooltipForDiagram": "Diagramme courant prenant en compte toutes les modifications réalisées",
     "notBuiltNodeTooltipForDiagram": "Diagramme du dernier nœud réalisé de la branche courante",
     "CouplingDeviceText": "Sections de jeu de barre",
