add pcc min results and logs
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1641,5 +1641,9 @@
     "MissingConnectionsInVoltageLevel": "Missing connections in voltage level (Connections removed from list on validation)",
     "moveFeederBaysSections": "Feeder bay will be connected onto the selected busbar section",
     "Length": "Amount of elements",
-    "equipmentID": "Equipment ID"
+    "equipmentID": "Equipment ID",
+    "PccMinTri": "Pcc min (MVA) ",
+    "IccMin": "Icc min (kA)",
+    "rOhm": "r (Ohm)",
+    "xOhm":"x (Ohm)"   
 }
