--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1637,5 +1637,8 @@
     "MissingConnectionsInVoltageLevel": "Missing connections in voltage level (Connections removed from list on validation)",
     "moveFeederBaysSections": "Feeder bay will be connected onto the selected busbar section",
     "Length": "Amount of elements",
-    "equipmentID": "Equipment ID"
+    "equipmentID": "Equipment ID",
+    "voltageLevelNominalVoltageMinValueError": "Nominal voltage must be greater than low voltage limit and less than high voltage limit",
+    "voltageLevelNominalVoltageMaxValueError": "Low voltage limit must be inferior to high voltage limit",
+    "generatorMinimumActivePowerMaxValueError" : "Minimum active power must be inferior to maximum active power"
 }
