rename to NETWORK_EXPORT_FINISHED

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -2,8 +2,8 @@
     "debug.message.downloadFile": "À la fin du calcul ses données seront téléchargées.",
     "debug.header.fileNotFound": "Données de calcul non trouvées",
     "debug.header.fileError": "Échec du téléchargement des données de calcul",
-    "export.message.started": "Export du fichier commencé",
-    "export.message.succeeded": "Export du fichier réussi",
+    "export.message.started": "Export du fichier a commencé",
+    "export.message.succeeded": "Export du fichier a réussi",
     "export.message.failed": "Échec du téléchargement du fichier",
     "export.message.fileNotFound": "Fichier non trouvé",
     "export.message.fileError": "Échec du téléchargement du fichier",
