--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -915,7 +915,7 @@
     "SelectedOperationalLimitGroup": "Active limit set",
     "SelectedOperationalLimitGroups": "Active limit sets",
     "Applicability": "Applicability",
-    "NameUnique": "Name should be unique",
+    "UniqueName": "Name should be unique",
 
     "CreateTwoWindingsTransformer": "Create a 2 windings transformer",
     "ModifyTwoWindingsTransformer": "Modify a 2 windings transformer",
