group search results by modification

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1447,7 +1447,8 @@
     "rootNetwork.searchPlaceholder.nodes": "Rechercher un nœud...",
     "rootNetwork.modificationTab": "Modifications",
     "rootNetwork.nodeTab": "Nœuds",
-    "rootNetwork.results": "{count, plural, =0 {Aucun résultat} =1 {# résultat} other {# résultats}}",
+    "rootNetwork.nodeResults": "{count, plural, =0 {Aucun résultat} =1 {# résultat} other {# résultats}}",
+    "rootNetwork.modificationResults": "{count, plural, =0 {Aucun ouvrage trouvé} =1 {# ouvrage trouvé} other {# ouvrages trouvés}}",
     "rootNetwork.loading": "Chargement...",
     "rootNetwork.originalNotFound": "La situation d'origine est introuvable",
     "rootNetwork.unknownPath": "<Inconnu>",
