--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,11 +2,9 @@
     "debug.message.downloadFile": "Computation data will be downloaded upon its completion.",
     "debug.header.fileNotFound": "Computation data not found",
     "debug.header.fileError": "Computation data download failed",
-    "export.message.started": "Export file started",
-    "export.message.succeeded": "Export file succeeded",
-    "export.message.failed": "export file failed",
-    "export.message.fileNotFound": "export file is not found",
-    "export.message.fileError": "export file error",
+    "export.message.started": "Export {fileName} started",
+    "export.message.succeeded": "Export {fileName} succeeded",
+    "export.message.failed": "Export file failed",
 
     "button.delete": "Delete",
     "button.continue": "Continue",
