--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,7 +4,7 @@
     "debug.header.fileError": "Computation data download failed",
     "export.message.started": "Export {fileName} started",
     "export.message.succeeded": "Export {fileName} succeeded",
-    "export.message.failed": "Export file failed",
+    "export.message.failed": "Export file failed {error}",
 
     "button.delete": "Delete",
     "button.continue": "Continue",
