Add the possibility to add et edit limits properties (#3364)
Signed-off-by: basseche <bassel.el-cheikh_externe@rte-france.com>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -900,6 +900,8 @@
     "operationalLimitsGroup1WithProperties": "Jeu de limites actif côté 1 ayant la propriété",
     "operationalLimitsGroup2WithProperties": "Jeu de limites actif côté 2 ayant la propriété",
     "Applicability": "Applicable sur",
+    "UniqueName": "Le nom doit être unique",
+    "FieldNotEmpty": "le champs ne doit pas être vide",
 
     "qMaxAtNominalVMustBeGreaterThanZero": "La valeur Q installée à tension nominale doit être supérieure à 0",
     "powerFactorMaxValueError": "La valeur du coefficient Q/P doit être inférieure à 1",
