--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -915,6 +915,8 @@
     "SelectedOperationalLimitGroup": "Active limit set",
     "SelectedOperationalLimitGroups": "Active limit sets",
     "Applicability": "Applicability",
+    "UniqueName": "Name should be unique",
+    "FieldNotEmpty": "Field should not be empty",
 
     "CreateTwoWindingsTransformer": "Create a 2 windings transformer",
     "ModifyTwoWindingsTransformer": "Modify a 2 windings transformer",
