paginates filtred sorted results
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1643,7 +1643,7 @@
     "Length": "Amount of elements",
     "equipmentID": "Equipment ID",
     "PccMinTri": "Pcc min (MVA) ",
-    "IccMin": "Icc min (kA)",
+    "IccMinTri": "Icc min (kA)",
     "rOhm": "r (Ohm)",
     "xOhm":"x (Ohm)"   
 }
