add download csv results
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1396,8 +1396,9 @@
     "startStateEstimationError": "Une erreur est survenue lors du lancement de l'estimation d'état",
     "stateEstimationError": "Une erreur est survenue lors de l'exécution de l'estimation d'état",
     "PccMin": "Pcc min N-1",
-    "startPccMinError": "Une erreur est survenue lors du lancement de pccMin",
-    "pccMinError": "Une erreur est survenue lors de l'exécution de pccMin",
+    "startPccMinError": "Une erreur est survenue lors du lancement de pcc min N-1",
+    "pccMinError": "Une erreur est survenue lors de l'exécution de pcc min N-1",
+    "PccMinResultsError": "Une erreur s'est produite lors de la récupération du résultat de pcc min N-1",
     "NoFilter": "Aucun filtre",
     "searchPlaceholder": "Recherche",
     "searchPlaceholderLog": "Rechercher dans les Logs",
