--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1398,6 +1398,7 @@
     "PccMin": "Pcc min N-1",
     "startPccMinError": "An error occurred while launching the pcc min",
     "pccMinError": "An error occurred when executing the pcc min",
+    "PccMinResultsError": "An error occurred when exporting pcc min N-1 results",
     "NoFilter": "No filter",
     "searchPlaceholder": "Search",
     "searchPlaceholderLog": "Search in Logs",
