fix min max control
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1640,6 +1640,5 @@
     "Length": "Nombre d'éléments",
     "equipmentID": "ID de l'ouvrage",
     "voltageLevelNominalVoltageMinValueError": "La tension nominale doit être comprise entre la limite de tension basse et la limite de tension haute",
-    "voltageLevelNominalVoltageMaxValueError": "La limite de tension basse doit être inférieure à celle de tension haute",
-    "generatorMinimumActivePowerMaxValueError" : "La puissance active min doit être inférieure à la puissance active max"
+    "voltageLevelNominalVoltageMaxValueError": "La limite de tension basse doit être inférieure à celle de tension haute"
 }
