--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1644,6 +1644,5 @@
     "Length": "Amount of elements",
     "equipmentID": "Equipment ID",
     "voltageLevelNominalVoltageMinValueError": "Nominal voltage must be greater than low voltage limit and less than high voltage limit",
-    "voltageLevelNominalVoltageMaxValueError": "Low voltage limit must be inferior to high voltage limit",
-    "generatorMinimumActivePowerMaxValueError" : "Minimum active power must be inferior to maximum active power"
+    "voltageLevelNominalVoltageMaxValueError": "Low voltage limit must be inferior to high voltage limit"
 }
