--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1448,8 +1448,8 @@
     "importCaseFailure": "Impossible d'importer la situation",
     "modificationActivationByRootNetworkError": "Une erreur est survenue lors de l'activation / désactivation de la modification par réseau racine",
     "rootNetwork.modificationsInfos": "Seules les modifications dans les nœuds réalisés et leurs nœuds parents apparaitront dans les résultats.",
-    "rootNetwork.searchPlaceholder.modifications": "Rechercher un ouvrage",
-    "rootNetwork.searchPlaceholder.nodes": "Rechercher un nœud",
+    "rootNetwork.searchLabel.modifications": "Rechercher un ouvrage",
+    "rootNetwork.searchLabel.nodes": "Rechercher un nœud",
     "rootNetwork.modificationTab": "Modifications",
     "rootNetwork.nodeTab": "Nœuds",
     "rootNetwork.results": "{count, plural, =0 {Aucun résultat} =1 {# résultat} other {# résultats}}",
