--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1446,8 +1446,8 @@
     "updateRootNetworksError": "An error occurred while updating the root network",
     "visibleRootNetwork": "Visible network : ",
     "rootNetwork.modificationsInfos": "Only modifications in built nodes and their parent nodes will appear in the results.",
-    "rootNetwork.searchPlaceholder.modifications": "Search equipment",
-    "rootNetwork.searchPlaceholder.nodes": "Search node",
+    "rootNetwork.searchLabel.modifications": "Search equipment",
+    "rootNetwork.searchLabel.nodes": "Search node",
     "rootNetwork.modificationTab": "Modifications",
     "rootNetwork.nodeTab": "Nodes",
     "rootNetwork.results": "{count, plural, =0 {No result} =1 {# result} other {# results}}",
