--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1446,12 +1446,11 @@
     "updateRootNetworksError": "An error occurred while updating the root network",
     "visibleRootNetwork": "Visible network : ",
     "rootNetwork.modificationsInfos": "Only modifications in built nodes and their parent nodes will appear in the results.",
-    "rootNetwork.searchPlaceholder.modifications": "Search for a modified equipment…",
-    "rootNetwork.searchPlaceholder.nodes": "Search for a node…",
+    "rootNetwork.searchLabel.modifications": "Search equipment",
+    "rootNetwork.searchLabel.nodes": "Search node",
     "rootNetwork.modificationTab": "Modifications",
     "rootNetwork.nodeTab": "Nodes",
-    "rootNetwork.nodeResults": "{count, plural, =0 {No result} =1 {# result} other {# results}}",
-    "rootNetwork.modificationResults": "{count, plural, =0 {No equipment found} =1 {# equipment found} other {# equipments found}}",
+    "rootNetwork.results": "{count, plural, =0 {No result} =1 {# result} other {# results}}",
     "rootNetwork.loading": "Loading...",
     "rootNetwork.originalNotFound": "The original case was not found",
     "rootNetwork.unknownPath": "<Unknown>",
