--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -591,7 +591,7 @@
     "VSC_CONVERTER_STATION": "Station de conversion VSC",
     "VSC": "HVDC (VSC)",
     "LCC": "HVDC (LCC)",
-    "BUS": "Bus",
+    "BUS": "Noeud électrique",
     "BUSBAR_SECTION": "Section de jeux de barres",
     "BY_FORMULA": "Modifier par formule",
     "BY_FILTER": "Modifier par filtre",
