--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1649,6 +1649,6 @@
     "generatorMinimumActivePowerMaxValueError" : "Minimum active power must be inferior to maximum active power",
     "PccMinTri": "Pcc min (MVA) ",
     "IccMinTri": "Icc min (kA)",
-    "rOhm": "r ((Ω))",
-    "xOhm":"x ((Ω))"   
+    "rOhm": "r (Ω)",
+    "xOhm":"x (Ω)"   
  }
