--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,6 +2,9 @@
     "debug.message.downloadFile": "Computation data will be downloaded upon its completion.",
     "debug.header.fileNotFound": "Computation data not found",
     "debug.header.fileError": "Computation data download failed",
+    "export.message.started": "Export {fileName} started",
+    "export.message.succeeded": "Export {fileName} succeeded",
+    "export.message.failed": "Export file failed {error}",
 
     "button.delete": "Delete",
     "button.continue": "Continue",
