--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -2,6 +2,9 @@
     "debug.message.downloadFile": "À la fin du calcul ses données seront téléchargées.",
     "debug.header.fileNotFound": "Données de calcul non trouvées",
     "debug.header.fileError": "Échec du téléchargement des données de calcul",
+    "export.message.started": "Export du {fileName} a commencé",
+    "export.message.succeeded": "Export du {fileName} a réussi",
+    "export.message.failed": "Échec du téléchargement du fichier {error}",
 
     "button.delete": "Supprimer",
     "button.continue": "Continuer",
