feat: add import parameters to root network creation
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1649,5 +1649,6 @@
     "PccMinTri": "Pcc min (MVA) ",
     "IccMinTri": "Icc min (kA)",
     "rOhm": "r (Ω)",
-    "xOhm":"x (Ω)"
+    "xOhm":"x (Ω)",
+    "importParameters": "Paramètres d'import"
 }
